 totally. The file is provided AS IS and is probably completely unreadable.

-----------------------------------------------------------------------------

Next version
------------

Changes:
* Add Aslona!
* Add new ROOM_OWNED_AREA type for generic owned rooms. Uses code similar to
  the Cathedral or Decos' house.
* Add crysteel.
* Orcs have black blood.

Fixes:
* Decos no longer lets you steal from him.

Aslona:
* A new main quest will see you trying to bring peace back to the kingdom of
  Aslona, currently in the middle of a civil war.
* Add Aslona Castle, Rebel Camp and Goblin Fort.

Version 0.57, released 24th September 2019
------------------------------------------

Changes:
* Add Black Market, an end-game shop to spend all excess gold in.
* Add game lore and fiction to the Doc folder.
* Magic helmets spawn with random material.
* Switch some helmets from full helmet to normal.
* Keys very rarely break when used.

Fixes:
* Clean up code.
* New "expansive terrain" can help prevent blocking important entrances.
* Improve item search algorithm.
* Fix ring detection to work same as scrolls.
* Enable wishes for empty containers, make empty cans and empty bottles wishable.
* No rotated pictures for equipments and newly-spawned items.
* Do not aggressively upgrade dependencies for mac build.
* Mirrored items cannot be dismantled into permanent lump of material.
* Stop weapon swap from auto-stealing items in shops.
* NPCs will sometimes talk to you on their own.

Version 0.56, released 19th February 2019
-----------------------------------------

 Changes:
* New banana-and-pick-axe icon on Mac and Windows.
* Remove Google groups e-mail address.

Fixes:
* Windows build done using mxe, which should fix issues on Windows 7.
* Fix first person messages.
* Simplify command descriptions.
* Fix path search for SDL2.
* Fix artifacts being spawned through polypiling.
* Try to fix stat growth while polymorphed.
* Fix crafting recipes.

Version 0.55, released 20th December 2018