@@ -16,9 +16,11 @@ Changes:
   the Cathedral or Decos' house.
 * Add crysteel.
 * Orcs have black blood.
+* Use GitHub app for LGTM.
 
 Fixes:
 * Decos no longer lets you steal from him.
+* You can no longer leave the Black Market through walls.
 
 Aslona:
 * A new main quest will see you trying to bring peace back to the kingdom of
